--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
 
 dependencies {
 
+//    buat ui
+    implementation 'com.google.android.material:material:1.4.0'
+
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
