--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MOBAPPSKennyLib">
         <activity
+            android:name=".LihatBukuActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".CariBukuActivity"
+            android:exported="false"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
