--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
         android:theme="@style/Theme.MOBAPPSKennyLib">
         <activity
             android:name=".LihatBukuActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false"/>
         <activity
             android:name=".CariBukuActivity"
+            android:parentActivityName=".MainActivity"
             android:exported="false"/>
         <activity
             android:name=".LoginActivity"
